# CG_RaycastingGame

./: CMakeLists.txt  README.md
assets/: level1.txt  level2.txt  level3.txt  map.txt
include/: constants.h
src/: color.h  imageLoader.h  main.cpp  raycaster.h
